 syntax = "proto3";

package randomPackage;

service Random {
  rpc PingPong(PingRequest) returns (PongReponse) {};
  rpc RandomNumbers(NumberRequest) returns (stream NumberResponse) {};
}

message PingRequest {
  string message = 1;
}

message PongReponse {
  string message = 1;
}

message NumberRequest {
  int32 maxVal = 1;
}

message NumberResponse {
  int32 value = 1;
}